# proj-neo-label

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  backup.sh  deploy.sh  docker-compose.yml  harden.sh  monitor-prod.py  monitor.py  neonatal_pose_annotator_prompt.md  run-dev.py  run.py  seed_users.example.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  items.py  labels.py  projects.py  users.py  videos.py
backend/app/core/: config.py  deps.py  security.py  storage.py
backend/app/schemas/: item.py  project.py  user.py
backend/app/services/: import_coco.py  item.py  label.py  project.py  user.py  video.py
backend/scripts/: inspect_keypoint_orientation.py  reconcile_seed_users.py
backend/tests/: conftest.py  test_assignment_api.py  test_auth_api.py  test_items_api.py  test_projects_api.py  test_review_api.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  items.ts  projects.ts  users.ts  videos.ts
frontend/src/components/: BabyAvatar.tsx  RodentAvatar.tsx
frontend/src/components/ui/: ConfirmDialog.tsx
frontend/src/lib/: download.ts  env.ts  keypoints.ts
frontend/src/pages/: AnnotatePage.tsx  LoginPage.tsx  PoseAnnotatePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  TextAnnotatePage.tsx
frontend/src/stores/: auth.ts
